--- a/exercicio-03/index.html
+++ b/exercicio-03/index.html
@@ -17,16 +17,16 @@
             <nav class="barra-navegacao">
                 <img class="image-logo" src="img/logo.png" alt="Logo de empresa de carro">
                 <ul class="menu">
-                    <li class="opcoe">Inicio</li>
-                    <li class="opcoe">Contatos</li>
-                    <li class="opcoe">Sobre</li>
+                    <li class="opcoe"><a href="index.html" class="botao-nav">Inicio</a></li>
+                    <li class="opcoe"><a href="#" class="botao-nav">Contatos</a></li>
+                    <li class="opcoe"><a href="#" class="botao-nav">Sobre</a></li>
                 </ul>
             </nav>
         </header>
-        <main>
+        <main class="principal">
             <article class="artigo">
-                <img class="img-texto" src="img/carro01.jpg">
                 <h1>Lorem Ipsum</h1>
+                <img class="img-texto" src="img/carro01.jpg">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In gravida vestibulum turpis, et aliquet
                     nisl malesuada ut. Aliquam erat volutpat. Pellentesque metus arcu, pharetra sollicitudin eros
                     sodales, sollicitudin malesuada sem. Integer mattis nulla ut diam lobortis, ut vestibulum justo
@@ -42,6 +42,36 @@
                     Mauris ut nisl in neque tincidunt cursus. Vestibulum ac lacinia dui. Phasellus sem eros, hendrerit
                     in ante at, mattis tristique dui. Nam eu mi risus. Donec et mi ut mi eleifend elementum et non
                     lacus. Cras tristique vitae lacus ut efficitur. Duis semper urna blandit luctus consectetur.</p>
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In gravida vestibulum turpis, et aliquet
+                    nisl malesuada ut. Aliquam erat volutpat. Pellentesque metus arcu, pharetra sollicitudin eros
+                    sodales, sollicitudin malesuada sem. Integer mattis nulla ut diam lobortis, ut vestibulum justo
+                    consectetur. Praesent augue lectus, tempus vel dapibus sed, dictum sit amet mi. Duis vestibulum,
+                    quam at porttitor blandit, tortor mi interdum purus, vel pharetra justo erat a augue. Mauris gravida
+                    at enim nec sollicitudin. Nullam ac mi nisl. Orci varius natoque penatibus et magnis dis parturient
+                    montes, nascetur ridiculus mus. In hendrerit vitae arcu a dignissim. Pellentesque dictum ullamcorper
+                    sem, at scelerisque enim vestibulum sit amet. Curabitur in pellentesque nulla. Quisque ut ex tempus,
+                    feugiat ante a, ultricies velit.</p>
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In gravida vestibulum turpis, et aliquet
+                    nisl malesuada ut. Aliquam erat volutpat. Pellentesque metus arcu, pharetra sollicitudin eros
+                    sodales, sollicitudin malesuada sem. Integer mattis nulla ut diam lobortis, ut vestibulum justo
+                    consectetur. Praesent augue lectus, tempus vel dapibus sed, dictum sit amet mi. Duis vestibulum,
+                    quam at porttitor blandit, tortor mi interdum purus, vel pharetra justo erat a augue. Mauris gravida
+                    at enim nec sollicitudin. Nullam ac mi nisl. Orci varius natoque penatibus et magnis dis parturient
+                    montes, nascetur ridiculus mus. In hendrerit vitae arcu a dignissim. Pellentesque dictum ullamcorper
+                    sem, at scelerisque enim vestibulum sit amet. Curabitur in pellentesque nulla. Quisque ut ex tempus,
+                    feugiat ante a, ultricies velit.</p>
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In gravida vestibulum turpis, et aliquet
+                    nisl malesuada ut. Aliquam erat volutpat. Pellentesque metus arcu, pharetra sollicitudin eros
+                    sodales, sollicitudin malesuada sem. Integer mattis nulla ut diam lobortis, ut vestibulum justo
+                    consectetur. Praesent augue lectus, tempus vel dapibus sed, dictum sit amet mi. Duis vestibulum,
+                    quam at porttitor blandit, tortor mi interdum purus, vel pharetra justo erat a augue. Mauris gravida
+                    at enim nec sollicitudin. Nullam ac mi nisl. Orci varius natoque penatibus et magnis dis parturient
+                    montes, nascetur ridiculus mus. In hendrerit vitae arcu a dignissim. Pellentesque dictum ullamcorper
+                    sem, at scelerisque enim vestibulum sit amet. Curabitur in pellentesque nulla. Quisque ut ex tempus,
+                    feugiat ante a, ultricies velit.</p>
             </article>
 
             <section class="content-main">
