update project exercicio-03

--- a/exercicio-03/index.html
+++ b/exercicio-03/index.html
@@ -75,7 +75,7 @@
             </article>
 
             <section class="content-main">
-                <!-- Sera tre ou seis cards com foto de carro -->
+                <!-- Sera tres ou seis cards com foto de carro -->
                 <article class="card"></article>
             </section>
         </main>
