add image in project exercicio-03

--- a/exercicio-03/index.html
+++ b/exercicio-03/index.html
@@ -75,8 +75,48 @@
             </article>
 
             <section class="content-main">
-                <!-- Sera tres ou seis cards com foto de carro -->
-                <article class="card"></article>
+                <article class="card">
+                    <img class="card-img" src="img/carro_card01.jpg" alt="Carros">
+                    <footer class="card-rodape">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In gravida vestibulum turpis, et
+                            aliquet nisl malesuada ut. Aliquam erat volutpat.</p>
+                    </footer>
+                </article>
+                <article class="card">
+                    <img class="card-img" src="img/carro_card02.jpg" alt="Carros">
+                    <footer class="card-rodape">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In gravida vestibulum turpis, et
+                            aliquet nisl malesuada ut. Aliquam erat volutpat.</p>
+                    </footer>
+                </article>
+                <article class="card">
+                    <img class="card-img" src="img/carro_card03.jpg" alt="Carros">
+                    <footer class="card-rodape">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In gravida vestibulum turpis, et
+                            aliquet nisl malesuada ut. Aliquam erat volutpat.</p>
+                    </footer>
+                </article>
+                <article class="card">
+                    <img class="card-img" src="img/carro_card04.jpg" alt="Carros">
+                    <footer class="card-rodape">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In gravida vestibulum turpis, et
+                            aliquet nisl malesuada ut. Aliquam erat volutpat.</p>
+                    </footer>
+                </article>
+                <article class="card">
+                    <img class="card-img" src="img/carro_card05.png" alt="Carros">
+                    <footer class="card-rodape">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In gravida vestibulum turpis, et
+                            aliquet nisl malesuada ut. Aliquam erat volutpat.</p>
+                    </footer>
+                </article>
+                <article class="card">
+                    <img class="card-img" src="img/carro_card06.jpg" alt="Carros">
+                    <footer class="card-rodape">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In gravida vestibulum turpis, et
+                            aliquet nisl malesuada ut. Aliquam erat volutpat.</p>
+                    </footer>
+                </article>
             </section>
         </main>
         <footer class="rodape">
