--- a/exercicio-03/index.html
+++ b/exercicio-03/index.html
@@ -110,7 +110,9 @@
             </section>
         </main>
         <footer class="rodape">
-            <!-- Colocar img e um texto -->
+            <p class="footer-content">
+                Copyright &copy; 2020
+            </p>
         </footer>
     </div>
 </body>
