--- a/fundamentos/16 - formulario.html
+++ b/fundamentos/16 - formulario.html
@@ -14,11 +14,18 @@
 
     <!-- action - servidor -->
     <form action="http://google.com/search" method="GET" target="_blank">
-        <input type="text" name="q">
+
+        <label for="textbusca">Faça uma busca</label>
+        <input id="textbusca" type="text" name="q">
         <!--type - tem varios-->
         <!--peesquisar name do input-->
 
         <input type="submit" value="ok">
+
+        <fieldset>
+            <legend>Login</legend>
+            <!-- Criar grupos logicos de campos-->
+        </fieldset>
 
     </form>
 </body>
