--- a/fundamentos/18 - forms.html
+++ b/fundamentos/18 - forms.html
@@ -18,7 +18,7 @@
             <legend>Fild types</legend>
 
             <label>E-mail</label>
-            <input type="text" required>
+            <input type="text" required placeholder="entre com um email">
             <br>
             <label>Email</label>
             <input type="email" maxlength="3">
