--- a/fundamentos/18 - forms.html
+++ b/fundamentos/18 - forms.html
@@ -24,7 +24,7 @@
             <input type="email" maxlength="3">
             <br>
             <label>Numeros de filhos</label>
-            <input type="number" min="0" max="1000">
+            <input type="number" min="0" max="1000" step="0.5">
             <br>
             <label>Nascimento</label>
             <input type="date" min="2018-01-30" max="2138-01-30">
