--- a/exercicio-04/index.html
+++ b/exercicio-04/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="jair">
     <meta name="description" content="Lista de documentos">
     <meta name="keywords" content="devs, html">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
