--- a/exercicio-04/index.html
+++ b/exercicio-04/index.html
@@ -11,7 +11,13 @@
 </head>
 
 <body>
-
+    <div class="content">
+        <header class="cabecalho">
+            <nav class="nav-bar">
+                
+            </nav>
+        </header>
+    </div>
 </body>
 
 </html>
