--- a/exercicio-04/index.html
+++ b/exercicio-04/index.html
@@ -14,9 +14,18 @@
     <div class="content">
         <header class="cabecalho">
             <nav class="nav-bar">
-                
+                <ul>
+                    <li class="lista"><a href="#">Inicio</a></li>
+                    <li class="lista"><a href="#">Sobre</a></li>
+                    <li class="lista"><a href="#">Contato</a></li>
+                </ul>
             </nav>
+            <div class="header-games">
+                <h1>Pesquisa de jogos</h1>
+                <p>Aplicação de jogos na vida das pessoas</p>
+            </div>
         </header>
+
     </div>
 </body>
 
