--- a/exercicio-04/index.html
+++ b/exercicio-04/index.html
@@ -14,18 +14,60 @@
     <div class="content">
         <header class="cabecalho">
             <nav class="nav-bar">
-                <ul>
+                <ul class="lista-nav">
                     <li class="lista"><a href="#">Inicio</a></li>
+                    <li class="lista"><a href="#">Jogos</a></li>
                     <li class="lista"><a href="#">Sobre</a></li>
                     <li class="lista"><a href="#">Contato</a></li>
                 </ul>
             </nav>
-            <div class="header-games">
-                <h1>Pesquisa de jogos</h1>
-                <p>Aplicação de jogos na vida das pessoas</p>
-            </div>
         </header>
+        <img class="image-top" src="img/painel.webp" alt="foto com pessoas jogando">
 
+
+        <article class="content-main">
+            <h1>Lorem ipsum ut commodo nec hac porta habitant aptent ligula nullam</h1>
+            <img class="content-img" src="img/tiro.webp" alt="jogo de tiro">
+            <p>Lorem ipsum ut commodo nec hac porta habitant aptent ligula nullam, dui ornare egestas phasellus tempus
+                vulputate id donec ante sapien ultrices, nostra facilisis quisque mauris sodales et accumsan conubia
+                primis. eros sodales aliquam aptent tincidunt magna placerat himenaeos, suspendisse ipsum aliquet
+                aliquam inceptos mollis, hac turpis suscipit iaculis volutpat est. orci ut risus tellus quisque felis
+                lobortis malesuada duis, sodales dictumst phasellus elementum urna elementum accumsan a fermentum, nam
+                leo amet potenti curabitur dictum aliquet. proin blandit faucibus scelerisque lacinia interdum posuere
+                ut consequat cubilia accumsan odio amet, aliquam dictumst nec neque curabitur urna eget mauris curabitur
+                suscipit ad. </p>
+            <p>Lobortis quam donec aliquam semper aliquam tincidunt, convallis suscipit ac massa elit aenean, adipiscing
+                diam lectus tristique hac. odio pellentesque dui aliquam senectus varius euismod auctor suspendisse
+                sociosqu, mollis cursus amet ligula eros aliquet blandit vehicula, orci aenean justo fringilla per
+                feugiat aptent eros. convallis auctor commodo consectetur habitant mi ligula praesent, eget luctus dolor
+                sagittis inceptos cursus ut duis, posuere justo facilisis ante tristique mollis. neque suspendisse erat
+                pharetra ante etiam sagittis aptent, adipiscing ut proin quam facilisis tellus rhoncus, varius porta
+                nisi dolor massa quisque. mauris rutrum eros aliquet sapien porta et himenaeos neque pulvinar sagittis,
+                feugiat suspendisse primis bibendum purus dapibus rutrum diam phasellus, sit facilisis diam augue
+                rhoncus curae donec pellentesque ultricies. </p>
+            <p>Cubilia aenean a posuere urna elementum consectetur, velit ad ut posuere urna vivamus fringilla, lacinia
+                hendrerit primis varius senectus. ornare malesuada potenti iaculis lobortis duis aliquam dapibus
+                porttitor donec, ligula class morbi sociosqu nam fusce in sollicitudin morbi mattis, sem vivamus enim
+                bibendum varius odio nibh lacus. at vulputate adipiscing odio fusce porta fermentum vitae dictumst leo
+                malesuada placerat sociosqu, tellus habitant etiam consequat in et platea lacinia dui sagittis. praesent
+                quisque orci dui nullam ad ante accumsan, cras gravida fames consequat lobortis arcu diam nunc,
+                sollicitudin taciti quisque sodales sociosqu curabitur. </p>
+            <p>Ac nisl sit pellentesque est taciti commodo dictumst facilisis, eleifend mollis cursus ornare pulvinar
+                curae augue at, inceptos felis commodo vulputate hendrerit tellus proin. diam aenean nibh massa
+                tristique ut nunc ultrices fermentum morbi faucibus, lectus nisl dapibus nisi lorem donec pharetra
+                primis ligula, conubia nisl leo sodales class sapien varius mauris cursus. quam fusce dictum aenean
+                inceptos rutrum lobortis justo posuere hac proin, mauris turpis libero convallis est sagittis leo semper
+                sed, est diam nibh iaculis torquent aptent blandit aliquam pretium. amet vel fringilla dui amet maecenas
+                dapibus rhoncus molestie ornare a ipsum euismod, dapibus convallis duis aliquam adipiscing nisi netus
+                convallis aliquet leo tortor velit, metus eleifend scelerisque quam vulputate vehicula ut cubilia luctus
+                nec fermentum. </p>
+            <p>Aenean lobortis eros scelerisque blandit praesent iaculis sollicitudin lectus pharetra, arcu dui placerat
+                nunc curabitur platea tortor suspendisse varius porta, posuere hac commodo taciti eget quam etiam
+                tempor. bibendum euismod ac non erat class neque sed ullamcorper senectus, faucibus vivamus accumsan ut
+                cubilia platea quis ante vehicula, lectus per elit ad vivamus taciti nisi suscipit. hendrerit justo
+                felis nisi facilisis varius nam, est libero diam turpis litora aptent tempor, pretium blandit posuere
+                risus magna. </p>
+        </article>
     </div>
 </body>
 
