complete project four

--- a/exercicio-04/index.html
+++ b/exercicio-04/index.html
@@ -68,7 +68,47 @@
                 felis nisi facilisis varius nam, est libero diam turpis litora aptent tempor, pretium blandit posuere
                 risus magna. </p>
         </article>
+        <section class="gallery">
+            <h2>Aenean lobortis eros </h2>
+            <div class="card">
+                <img class="card-img" src="img/clash-royale.jpg" alt="game">
+                <div class="box">
+                    <p class="cards-p-title">Vest Romasa</p>
+                    <p class="cards-p-content">Jogo real</p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img" src="img/dk-country.png" alt="game">
+                <p class="cards-p-title">Vest Romasa</p>
+                <p class="cards-p-content">Macaco mais amado do planeta</p>
+            </div>
+            <div class="card">
+                <img class="card-img" src="img/gamer.jpg" alt="game">
+                <p class="cards-p-title">Vest Romasa</p>
+                <p class="cards-p-content">novos classicos</p>
+            </div>
+            <div class="card">
+                <img class="card-img" src="img/gamers.jpg" alt="game">
+                <p class="cards-p-title">Vest Romasa</p>
+                <p class="cards-p-content">Strong &amp; charismatic</p>
+            </div>
+            <div class="card">
+                <img class="card-img" src="img/god_of_war.webp" alt="game">
+                <div class="box">
+                    <p class="cards-p-title">Vest Romasa</p>
+                    <p class="cards-p-content">Strong &amp; charismatic</p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img" src="img/mario-kart-tour.jpg" alt="game">
+                <p class="cards-p-title">Vest Romasa</p>
+                <p class="cards-p-content">Encanador nas pistas</p>
+            </div>
+        </section>
     </div>
+    <footer>
+        <p>Jair produções</p>
+    </footer>
 </body>
 
 </html>
