--- a/projeto 03/index.html
+++ b/projeto 03/index.html
@@ -11,7 +11,38 @@
 </head>
 
 <body>
+    <header class="main-header">
+        <a href="index.html" class="main-header-link">
+            <img src="" alt="Qualquer coisa">
+        </a>
 
+        <h1>Trabalhos de Jair <br>
+            <strong>Francisco Jair</strong>,<br>
+            um cara qualquer como você<br>
+            nerver play <a href="http://www.google.com">Google</a>
+        </h1>
+    </header>
+    <main class="main-content">
+
+        <section class="content-section">
+            <h2>Qualque couisa quye esaksnjfbsdahvbfnbdasbfhndbsnjfbdsj dhfbsdhbfhsdbfhas</h2>
+            <p>Donec vulputate porta commodo. Pellentesque pulvinar sit amet risus ac cursus. Praesent bibendum sapien
+                nisi,
+                et scelerisque arcu tempor at. Quisque aliquam efficitur eleifend. Mauris pellentesque, tellus non
+                tempus
+                faucibus, arcu eros pulvinar ex, sed ultrices nunc nisi sit amet sem. Fusce consequat nunc vitae
+                vestibulum
+                vehicula. Integer sit amet finibus nibh. Duis sodales libero ut metus volutpat, id vehicula mauris
+                iaculis.
+            </p>
+            
+            <a href="#" title="Veja mais" class="button-default">Veja mais</a>
+
+        </section>
+
+
+    </main>
+    <footer class="main-footer"></footer>
 </body>
 
 </html>
