--- a/projeto 03/index.html
+++ b/projeto 03/index.html
@@ -35,9 +35,13 @@
                 vehicula. Integer sit amet finibus nibh. Duis sodales libero ut metus volutpat, id vehicula mauris
                 iaculis.
             </p>
-            
+
             <a href="#" title="Veja mais" class="button-default">Veja mais</a>
 
+        </section>
+
+        <section class="content-section">
+            
         </section>
 
 
