--- a/projeto 03/index.html
+++ b/projeto 03/index.html
@@ -41,7 +41,56 @@
         </section>
 
         <section class="content-section">
-            
+            <h3>Recent Works</h3>
+            <article class="recente-works-cards">
+                <a href="img/fulls/01.jpg">
+                    <img src="img/thumbs/01.jpg" title="Uma imagem">
+                </a>
+                <p class="recent-works-card-titel">Lorem ipsum dolor sit amet</p>
+                <p>Cras et turpis magna. Suspendisse ultricies odio id nisi ullamcorper sodales</p>
+            </article>
+
+            <article class="recente-works-cards">
+                <a href="img/fulls/02.jpg">
+                    <img src="img/thumbs/02.jpg" title="Uma imagem">
+                </a>
+                <p class="recent-works-card-titel">Lorem ipsum dolor sit amet</p>
+                <p>Cras et turpis magna. Suspendisse ultricies odio id nisi ullamcorper sodales</p>
+            </article>
+
+            <article class="recente-works-cards">
+                <a href="img/fulls/03.jpg">
+                    <img src="img/thumbs/03.jpg" title="Uma imagem">
+                </a>
+                <p class="recent-works-card-titel">Lorem ipsum dolor sit amet</p>
+                <p>Cras et turpis magna. Suspendisse ultricies odio id nisi ullamcorper sodales</p>
+            </article>
+
+            <article class="recente-works-cards">
+                <a href="img/fulls/04.jpg">
+                    <img src="img/thumbs/04.jpg" title="Uma imagem">
+                </a>
+                <p class="recent-works-card-titel">Lorem ipsum dolor sit amet</p>
+                <p>Cras et turpis magna. Suspendisse ultricies odio id nisi ullamcorper sodales</p>
+            </article>
+
+            <article class="recente-works-cards">
+                <a href="img/fulls/05.jpg">
+                    <img src="img/thumbs/05.jpg" title="Uma imagem">
+                </a>
+                <p class="recent-works-card-titel">Lorem ipsum dolor sit amet</p>
+                <p>Cras et turpis magna. Suspendisse ultricies odio id nisi ullamcorper sodales</p>
+            </article>
+
+            <article class="recente-works-cards">
+                <a href="img/fulls/06.jpg">
+                    <img src="img/thumbs/06.jpg" title="Uma imagem">
+                </a>
+                <p class="recent-works-card-titel">Lorem ipsum dolor sit amet</p>
+                <p>Cras et turpis magna. Suspendisse ultricies odio id nisi ullamcorper sodales</p>
+            </article>
+
+            <a href="#" titel="veja mais" class="button-default">Veja portifolio completo</a>
         </section>
 
 
